--- a/articulos/tecnicas_ciberseguridad_moderna.html
+++ b/articulos/tecnicas_ciberseguridad_moderna.html
@@ -131,7 +131,7 @@
     </main>
 
     <nav class="container">
-        <a href="articulos.html">Ver más artículos</a>
+        <a href="../artículos.html">Ver más artículos</a>
     </nav>
 
     <footer>
