--- a/articulos/configuracion_seguridad_win.html
+++ b/articulos/configuracion_seguridad_win.html
@@ -175,7 +175,7 @@
     </main>
 
     <nav class="container">
-        <a href="articulos.html">Ver más artículos</a>
+        <a href="../articulos.html">Ver más artículos</a>
     </nav>
 
     <footer>
