--- a/articulos/seguridad_disp_iot.html
+++ b/articulos/seguridad_disp_iot.html
@@ -158,7 +158,7 @@
     </main>
 
     <nav class="container">
-        <a href="articulos.html">Ver más artículos</a>
+        <a href="../articulos.html">Ver más artículos</a>
     </nav>
 
     <footer>
